--- a/index.html
+++ b/index.html
@@ -1,12 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pooch Care</title>
+    <!-- Link CSS -->
+    <link rel="stylesheet" href="./Styles/index.css">
+    <!-- Link FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Link google font -->
+
+    <!-- Link CSS Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
+
 <body>
-    
+
+    <header class="header">
+        <div class="container">
+            <div class="logo">
+                <h1>Pooch Care</h1>
+            </div>
+
+            <div class="menu">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Services</a>
+                <a href="#">Gallery</a>
+                <a href="#">blog<i class="fa fa-angle-down"></i></a>
+                <a href="#">Contact</a>
+                <div class="dark-theme" ;"><i class="fa fa-moon"></i></div>
+            </div>
+        </div>
+    </header>
+
+    <section class="carousel">
+        <div class="container">
+            <div class="content">
+                <div class="item">
+                    <h1>Quality Things for Loving Pets</h1>
+                    <p>Keeps your Pet Smiling</p>
+                    <a href="#">Read More</a>
+                    <a href="#">Contact Us</a>
+                </div>
+                <div class="item">
+                    <h1>Delivering happiness for Pets</h1>
+                    <p>For the love of pets</p>
+                    <a href="#">Read More</a>
+                    <a href="#">Contact Us</a>
+                </div>
+                <div class="item">
+                    <h1>Quality Things for Loving Pets</h1>
+                    <p>Keeps your Pet Smiling</p>
+                    <a href="#">Read More</a>
+                    <a href="#">Contact Us</a>
+                </div>
+                <div class="item">
+                    <h1>Delivering happiness for Pets</h1>
+                    <p>We help your Projects</p>
+                    <a href="#">Read More</a>
+                    <a href="#">Contact Us</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="about">
+
+    </section>
+
+    <section class="features">
+
+    </section>
+
+    <section class="servieces">
+
+    </section>
+
+    <section class="number">
+
+    </section>
+
+    <section class="plan">
+
+    </section>
+
+    <section class="adsvideo">
+
+    </section>
+
+    <section class="clients">
+
+    </section>
+
+    <section class="bottom">
+
+    </section>
+
+    <footer class="footer">
+
+    </footer>
+
+    <!-- Link JS Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
