--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
                         <div class="collapse navbar-collapse fs-4" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link active text-success" aria-current="page" href="#">Home</a>
+                                    <a class="nav-link active text-success d-inline-block" aria-current="page" href="#">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active text-light" aria-current="page" href="#">About</a>
+                                    <a class="nav-link active text-light d-inline-block" aria-current="page" href="#">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active text-light" aria-current="page" href="#">Services</a>
+                                    <a class="nav-link active text-light d-inline-block" aria-current="page" href="#">Services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-light" href="#">Gallery</a>
+                                    <a class="nav-link text-light d-inline-block" href="#">Gallery</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link nav_blog text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="nav-link nav_blog text-light d-inline-block" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         Blog
                                         <i class="fa fa-chevron-down"></i>
                                     </a>
                                     <ul class="dropdown-menu bg-dark fs-4">
-                                        <li><a class="dropdown-item bg-dark text-light" href="#">Blog post</a></li>
-                                        <li><a class="dropdown-item bg-dark text-light" href="#">Blog single</a></li>
+                                        <li><a class="dropdown-item bg-dark text-light d-inline-block" href="#">Blog post</a></li>
+                                        <li><a class="dropdown-item bg-dark text-light d-inline-block" href="#">Blog single</a></li>
                                         <!-- <li><hr class="dropdown-divider text-light"></li> -->
-                                        <li><a class="dropdown-item bg-dark text-light" href="#">Landing page</a></li>
+                                        <li><a class="dropdown-item bg-dark text-light d-inline-block" href="#">Landing page</a></li>
                                     </ul>
                                 </li>
                                 <!-- <li class="nav-item">
