--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
 <body>
     <header class="header">
+        <div class="background-container">
+            <div class="background-small-container"></div>
+        </div>
         <nav class="header_container d-flex bg-dark ">
             <div class="header_title w-25 ">
                 <a href="#" class="text-success  d-inline-block text-decoration-none m ">
@@ -97,7 +100,36 @@
                 </nav>
             </div>
         </nav>
-        
+        <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <!-- <div class="carousel-item active">
+                <img src="/image/banner1.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/image/banner2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/image/banner3.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/image/banner4.jpg" class="d-block w-100" alt="...">
+              </div> -->
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
     </header>
     <section></section>
     <section></section>
@@ -111,7 +143,7 @@
 
 
 
-
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
 
