--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
 <body>
     <header class="header">
-        <div class="background-container">
+        <!-- <div class="background-container">
             <div class="background-small-container"></div>
-        </div>
-        <nav class="header_container d-flex bg-dark ">
+        </div> -->
+        <nav class="header_container d-flex bg-dark z-3">
             <div class="header_title w-25 ">
                 <a href="#" class="text-success  d-inline-block text-decoration-none m ">
                     Pooch Care
@@ -44,20 +44,18 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse fs-4" id="navbarSupportedContent">
-                            
-                            
+
+
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
                                     <a class="nav-link text-success d-inline-block" aria-current="page"
                                         href="#">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link d-inline-block" aria-current="page"
-                                        href="#">About</a>
+                                    <a class="nav-link d-inline-block" aria-current="page" href="#">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link d-inline-block" aria-current="page"
-                                        href="#">Services</a>
+                                    <a class="nav-link d-inline-block" aria-current="page" href="#">Services</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link d-inline-block" href="#">Gallery</a>
@@ -72,14 +70,14 @@
                                     </a>
                                     <ul class="dropdown-menu bg-dark fs-4">
                                         <li><a class="dropdown-item bg-dark d-inline-block" href="#">
-                                            Blog post
-                                        </a></li>
+                                                Blog post
+                                            </a></li>
                                         <li><a class="dropdown-item bg-dark d-inline-block" href="#">
-                                            Blog single</a></li>
+                                                Blog single</a></li>
                                         <!-- <li><hr class="dropdown-divider"></li> -->
                                         <li><a class="dropdown-item bg-dark d-inline-block" href="#">
-                                            Landing page
-                                        </a></li>
+                                                Landing page
+                                            </a></li>
                                     </ul>
                                 </li>
                                 <!-- <li class="nav-item">
@@ -100,36 +98,83 @@
                 </nav>
             </div>
         </nav>
-        <div id="carouselExampleIndicators" class="carousel slide">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+
+        <div id="carouselExampleDark" class="carousel carousel-dark slide">
+            <div class="carousel-indicators ">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" aria-current="true"
+                    aria-label="Slide 1" class="active bg-light d-block"
+                    style="width: 20px;height: 20px;border-radius: 50%;"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"
+                    class="active bg-light d-block" style="width: 20px;height: 20px;border-radius: 50%;"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"
+                    class="active bg-light d-block" style="width: 20px;height: 20px;border-radius: 50%;"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"
+                    class="active bg-light d-block" style="width: 20px;height: 20px;border-radius: 50%;"></button>
+
             </div>
-            <div class="carousel-inner">
-              <!-- <div class="carousel-item active">
-                <img src="/image/banner1.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="/image/banner2.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="/image/banner3.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="/image/banner4.jpg" class="d-block w-100" alt="...">
-              </div> -->
+            <div class="carousel-inner ">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="/image/banner1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption item-1 d-none d-md-block z-2 m-md-2" style="text-align: left;">
+                        <h1 class="text-white fw-bold" style="font-size: 70px;">Quality Things For <br> Loving Test</h1>
+                        <p class="fs-2 text-white">Keep Your Pet Smiling</p>
+                        <span class="read-more">
+                            <a href="#" class="d-inline-block text-success fs-2 text-decoration-none">Read More</a>
+                        </span>
+                        <div class="contact-us">
+                            <a href="#" class="d-inline-block text-white fs-2 text-decoration-none">Contact us</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="/image/banner2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption item-2 d-none d-md-block z-2" style="text-align: left;">
+                        <h1 class="text-white fw-bold" style="font-size: 70px;">Quality Things For <br> Loving Test</h1>
+                        <p class="fs-2 text-white">Keep Your Pet Smiling</p>
+                        <span class="read-more">
+                            <a href="#" class="d-inline-block text-success fs-2 text-decoration-none">Read More</a>
+                        </span>
+                        <div class="contact-us">
+                            <a href="#" class="d-inline-block text-white fs-2 text-decoration-none">Contact us</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/image/banner3.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption item-1 d-none d-md-block z-2" style="text-align: left;">
+                        <h1 class="text-white fw-bold" style="font-size: 70px;">Quality Things For <br> Loving Test</h1>
+                        <p class="fs-2 text-white">Keep Your Pet Smiling</p>
+                        <span class="read-more">
+                            <a href="#" class="d-inline-block text-success fs-2 text-decoration-none">Read More</a>
+                        </span>
+                        <div class="contact-us">
+                            <a href="#" class="d-inline-block text-white fs-2 text-decoration-none">Contact us</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/image/banner4.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption item-2 d-none d-md-block z-2" style="text-align: left;">
+                        <h1 class="text-white fw-bold" style="font-size: 70px;">Quality Things For <br> Loving Test</h1>
+                        <p class="fs-2 text-white">Keep Your Pet Smiling</p>
+                        <span class="read-more">
+                            <a href="#" class="d-inline-block text-success fs-2 text-decoration-none">Read More</a>
+                        </span>
+                        <div class="contact-us">
+                            <a href="#" class="d-inline-block text-white fs-2 text-decoration-none">Contact us</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
-            </button>
+            </button> -->
         </div>
-
     </header>
     <section></section>
     <section></section>
@@ -143,7 +188,9 @@
 
 
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
 
