--- a/index.html
+++ b/index.html
@@ -24,166 +24,88 @@
 </head>
 
 <body>
-    <header class="header">
-        <!-- <div class="background-container">
-            <div class="background-small-container"></div>
-        </div> -->
-        <nav class="header_container d-flex bg-dark z-3">
-            <div class="header_title w-25 ">
-                <a href="#" class="text-success  d-inline-block text-decoration-none m ">
-                    Pooch Care
-                </a>
-            </div>
-            <div class="header_menu w-75">
-                <nav class="navbar navbar-expand-lg ">
-                    <div class="container-fluid bg-dark">
-                        <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse fs-4" id="navbarSupportedContent">
 
 
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link text-success d-inline-block" aria-current="page"
-                                        href="#">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link d-inline-block" aria-current="page" href="#">About</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link d-inline-block" aria-current="page" href="#">Services</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link d-inline-block" href="#">Gallery</a>
-                                </li>
-
-
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link nav_blog d-inline-block" href="#" role="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
-                                        Blog
-                                        <i class="fa fa-chevron-down"></i>
-                                    </a>
-                                    <ul class="dropdown-menu bg-dark fs-4">
-                                        <li><a class="dropdown-item bg-dark d-inline-block" href="#">
-                                                Blog post
-                                            </a></li>
-                                        <li><a class="dropdown-item bg-dark d-inline-block" href="#">
-                                                Blog single</a></li>
-                                        <!-- <li><hr class="dropdown-divider"></li> -->
-                                        <li><a class="dropdown-item bg-dark d-inline-block" href="#">
-                                                Landing page
-                                            </a></li>
-                                    </ul>
-                                </li>
-                                <!-- <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
-                          </li> -->
-
-
-                                <li class="nav-item">
-                                    <a class="nav-link d-inline-block" aria-current="page" href="#">Contact</a>
-                                </li>
-                            </ul>
-                            <!-- <form class="d-flex" role="search">
-                          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                          <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form> -->
-                        </div>
-                    </div>
-                </nav>
-            </div>
-        </nav>
-
-        <div id="carouselExampleDark" class="carousel carousel-dark slide">
-            <div class="carousel-indicators ">
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" aria-current="true"
-                    aria-label="Slide 1" class="active bg-light d-block"
-                    style="width: 20px;height: 20px;border-radius: 50%;"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"
-                    class="active bg-light d-block" style="width: 20px;height: 20px;border-radius: 50%;"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"
-                    class="active bg-light d-block" style="width: 20px;height: 20px;border-radius: 50%;"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"
-                    class="active bg-light d-block" style="width: 20px;height: 20px;border-radius: 50%;"></button>
+    <section class="number bg-success w-100 h-25">
+        <div class="container  row ">
+            <div class="col-3">
 
             </div>
-            <div class="carousel-inner ">
-                <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="/image/banner1.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption item-1 d-none d-md-block z-2 m-md-2" style="text-align: left;">
-                        <h1 class="text-white fw-bold" style="font-size: 70px;">Quality Things For <br> Loving Test</h1>
-                        <p class="fs-2 text-white">Keep Your Pet Smiling</p>
-                        <span class="read-more">
-                            <a href="#" class="d-inline-block text-success fs-2 text-decoration-none">Read More</a>
-                        </span>
-                        <div class="contact-us">
-                            <a href="#" class="d-inline-block text-white fs-2 text-decoration-none">Contact us</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="2000">
-                    <img src="/image/banner2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption item-2 d-none d-md-block z-2" style="text-align: left;">
-                        <h1 class="text-white fw-bold" style="font-size: 70px;">Quality Things For <br> Loving Test</h1>
-                        <p class="fs-2 text-white">Keep Your Pet Smiling</p>
-                        <span class="read-more">
-                            <a href="#" class="d-inline-block text-success fs-2 text-decoration-none">Read More</a>
-                        </span>
-                        <div class="contact-us">
-                            <a href="#" class="d-inline-block text-white fs-2 text-decoration-none">Contact us</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="/image/banner3.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption item-1 d-none d-md-block z-2" style="text-align: left;">
-                        <h1 class="text-white fw-bold" style="font-size: 70px;">Quality Things For <br> Loving Test</h1>
-                        <p class="fs-2 text-white">Keep Your Pet Smiling</p>
-                        <span class="read-more">
-                            <a href="#" class="d-inline-block text-success fs-2 text-decoration-none">Read More</a>
-                        </span>
-                        <div class="contact-us">
-                            <a href="#" class="d-inline-block text-white fs-2 text-decoration-none">Contact us</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="/image/banner4.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption item-2 d-none d-md-block z-2" style="text-align: left;">
-                        <h1 class="text-white fw-bold" style="font-size: 70px;">Quality Things For <br> Loving Test</h1>
-                        <p class="fs-2 text-white">Keep Your Pet Smiling</p>
-                        <span class="read-more">
-                            <a href="#" class="d-inline-block text-success fs-2 text-decoration-none">Read More</a>
-                        </span>
-                        <div class="contact-us">
-                            <a href="#" class="d-inline-block text-white fs-2 text-decoration-none">Contact us</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button> -->
+            <div class="col-3"></div>
+            <div class="col-3"></div>
+            <div class="col-3"></div>
         </div>
-    </header>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
+    </section>
+    <section class="plan bg-dark bg-gradient">
+        <div class="container">
+            <h1 class="text-danger-emphasis text-center fs-2" stlyle="margin-top: 50px;">Our Plan</h1>
+            <h2 class="text-light fs-1 text-center mt-4">Affordable Packages</h2>
+        </div>
+        <div class="row" style="margin: 50px 200px;">
+            <div class="container col-4">
+                <div class="plant_content shadow-sm p-3 mb-5 bg-dark rounded text-center mt-5">
+                    <h1 class="mt-5 text-light">Free Package</h1>
+                    <p class="mt-3">
+                        <span class="fs-3 text-success fw-bold">$</span>
+                        <span class="number_plan text-success fw-bold" style="font-size: 60px !important;">0</span>
+                        <span class="fs-5 text-secondary">/month</span>
+                    </p>
+                    <p class="fs-4 mt-5 text-secondary">
+                        5 Dog Walk <br><br>
+                        3 Vet Visit <br><br>
+                        3 Pet Spa <br><br>
+                        Free Supports <br><br>
+                        Customer Support 
+                    </p>
+                    <button class="btn btn-success fs-3 mt-4" style="width: 220px;height: 60px;"> Buy now</button>
+                </div>
+            </div>
+            <div class="container col-4">
+                <div class="plant_content bg-success text-center">
+                    <div class="bg-light mx-auto" style="width: 130px;height: 40px;border-radius: 5px; margin-top: 40px !important;">
+                        <p class="fs-5 fw-bold text-success">Save 10%</p>
+                    </div>
+                    <h1 class="text-light mt-5">Standard Package</h1>
+                    <p class="mt-3 pb-4">
+                        <span class="fs-3 text-light fw-bold">$</span>
+                        <span class="text-light fw-bold" style="font-size: 60px !important;">39</span>
+                        <span class="fs-5 text-light">/month</span>
+                    </p>
+                </div>
+                <div class="shadow-sm p-3 mb-5 bg-dark text-center mt-5" style="margin-top: -15px !important;">
+                    <p class="fs-4 mt-5 text-secondary">
+                        5 Dog Walk <br><br>
+                        3 Vet Visit <br><br>
+                        3 Pet Spa <br><br>
+                        Free Supports <br><br>
+                        Customer Support 
+                    </p>
+                    <button class="btn btn-success fs-3 mt-4" style="width: 220px;height: 60px;"> Get started</button>
+                </div>
+            </div>
+            <div class="container col-4">
+                <div class="plant_content shadow-sm p-3 mb-5 bg-dark rounded text-center mt-5">
+                    <h1 class="mt-5 text-light">Pro Package</h1>
+                    <p class="mt-3">
+                        <span class="fs-3 text-success fw-bold">$</span>
+                        <span class="number_plan text-success fw-bold" style="font-size: 60px !important;">89</span>
+                        <span class="fs-5 text-secondary">/month</span>
+                    </p>
+                    <p class="fs-4 mt-5 text-secondary">
+                        5 Dog Walk <br><br>
+                        3 Vet Visit <br><br>
+                        3 Pet Spa <br><br>
+                        Free Supports <br><br>
+                        Customer Support 
+                    </p>
+                    <button class="btn btn-success fs-3 mt-4" style="width: 220px;height: 60px;"> Buy now</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="title-video"></section>
+    <section class="clients"></section>
+    <section class="contact_update"></section>
     <footer class="footer"></footer>
 
 
