--- a/index.html
+++ b/index.html
@@ -52,14 +52,18 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Gallery</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link" href="#">
-              <span>Blog</span>
-              <i class="fa-solid fa-chevron-down"></i>
+          <li class="nav-item-drop">
+            <a class="nav-link" href="#" id="navbarDropdown1">
+              Blog<span class="fa fa-angle-down"></span>
             </a>
+            <div class="drop-menu">
+              <a class="item" href="#"><p>Blog Posts</p></a>
+              <a class="item" href="#"><p>Blog single</p></a>
+              <a class="item" href="#"><p>Landing Page</p></a>
+            </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="#">Contact</a>
           </li>
           <li class="nav-item">
             <div class="container btn-sun-moon">
@@ -270,9 +274,11 @@
           </ul>
         </div>
       </div>
-
     </div>
   </section>
+
+
+  
 
   <a href="#" class="backToTop cd-top text-replace js-cd-top">
     <i class="fa fa-arrow-up"></i>
@@ -297,6 +303,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
+
   <!-- BACK TO TOP JS -->
   <script src="./js/index.js"></script>
 
@@ -307,6 +314,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
     crossorigin="anonymous"></script>
+
 </body>
 
 </html>
