--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </section>
 
 
-    <!-- VIDEO -->
+                                            <!-- VIDEO -->
 
     <section class="title-video">
         <div class="container text-center" style="margin-top: 150px !important;">
@@ -161,10 +161,11 @@
     <br><br><br><br><br><br><br><br>
 
 
-    <!-- CLIENTS-CAROUSEL_còn một số lỗi chưa fix được -->
+                                    <!-- CLIENTS-CAROUSEL -->
 
     <section class="clients" style="background-color: rgb(236, 242, 243);width: 100%;">
         <div class="clients_title text-center">
+            <br><br><br>
             <p class="text-danger fs-2">TESTIMONIALS</p>
             <h1 class="text-black fw-bold mb-5">Happy Clients & Feedbacks</h1>
         </div>
@@ -299,7 +300,7 @@
                 <span class="visually-hidden">Next</span>
             </button> -->
         </div>
-
+        <br><br><br>
     </section>
 
     <!-- CONTACT-UPDATE -->
