--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 <div class="input-group mb-3">
                     <input type="email" class="form-control fs-4 contact-input" placeholder="Add your Email..."
                         aria-label="Recipient's username" aria-describedby="button-addon2" style="height: 80px;">
-                    <button class="btn btn-outline-secondary w-25 contact-input-button fs-4 ms-2" type="button" id="button-addon2" style="height: 80px;">Subcribe</button>
+                    <button class="btn btn-success w-25 contact-input-button fs-4 ms-2" type="button" id="button-addon2" style="height: 80px;">Subcribe</button>
                 </div>
             </div>
         </div>
